--- a/src/AutoprefixerHost/Resources/Strings.resx
+++ b/src/AutoprefixerHost/Resources/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Common_ArgumentIsEmpty" xml:space="preserve">
+    <value>The parameter '{0}' must be a non-empty string.</value>
+  </data>
   <data name="Common_EnumValueToCodeConversionFailed" xml:space="preserve">
     <value>Can't find string code that corresponding to the value '{0}' of enumeration type `{1}`.</value>
   </data>
