--- a/src/AutoprefixerHost/Resources/Strings.ru-ru.resx
+++ b/src/AutoprefixerHost/Resources/Strings.ru-ru.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Common_ArgumentIsEmpty" xml:space="preserve">
+    <value>Параметр с именем "{0}" не должен содержать пустую строку!</value>
+  </data>
   <data name="Common_EnumValueToCodeConversionFailed" xml:space="preserve">
     <value>Не удается найти строковый код, соответствующий значению "{0}" перечислимого типа `{1}`!</value>
   </data>
