--- a/src/AutoprefixerHost/Resources/Strings.resx
+++ b/src/AutoprefixerHost/Resources/Strings.resx
@@ -120,6 +120,9 @@
   <data name="Common_ArgumentIsEmpty" xml:space="preserve">
     <value>The parameter '{0}' must be a non-empty string.</value>
   </data>
+  <data name="Common_ArgumentIsNull" xml:space="preserve">
+    <value>The parameter '{0}' must be a non-nullable.</value>
+  </data>
   <data name="Common_EnumValueToCodeConversionFailed" xml:space="preserve">
     <value>Can't find string code that corresponding to the value '{0}' of enumeration type `{1}`.</value>
   </data>
