--- a/src/AutoprefixerHost/Resources/Strings.resx
+++ b/src/AutoprefixerHost/Resources/Strings.resx
@@ -127,7 +127,7 @@
     <value>Can't find string code that corresponding to the value '{0}' of enumeration type `{1}`.</value>
   </data>
   <data name="Common_SeeOriginalErrorMessage" xml:space="preserve">
-    <value>See the original error message: "{0}".</value>
+    <value>See the original error message: “{0}”.</value>
   </data>
   <data name="ErrorDetails_ColumnNumber" xml:space="preserve">
     <value>Column number</value>
@@ -149,6 +149,33 @@
   </data>
   <data name="ErrorDetails_Type" xml:space="preserve">
     <value>Type</value>
+  </data>
+  <data name="JsonReader_UnexpectedCharacterEncountered" xml:space="preserve">
+    <value>Unexpected character encountered, excepted a JSON {0} token.</value>
+  </data>
+  <data name="JsonSerializer_TypeIsNotPrimitive" xml:space="preserve">
+    <value>The `{0}` type is not primitive.</value>
+  </data>
+  <data name="JsonTokenTypeName_Boolean" xml:space="preserve">
+    <value>true or false literal</value>
+  </data>
+  <data name="JsonTokenTypeName_EndArray" xml:space="preserve">
+    <value>end array (`]`)</value>
+  </data>
+  <data name="JsonTokenTypeName_EndObject" xml:space="preserve">
+    <value>end object (`}`)</value>
+  </data>
+  <data name="JsonTokenTypeName_Number" xml:space="preserve">
+    <value>number</value>
+  </data>
+  <data name="JsonTokenTypeName_StartArray" xml:space="preserve">
+    <value>start array (`[`)</value>
+  </data>
+  <data name="JsonTokenTypeName_StartObject" xml:space="preserve">
+    <value>start object (`{`)</value>
+  </data>
+  <data name="JsonTokenTypeName_String" xml:space="preserve">
+    <value>string</value>
   </data>
   <data name="Processor_AutoprefixerNotLoaded" xml:space="preserve">
     <value>During loading of the Autoprefixer error has occurred.</value>
